# ChangeLog for www-plugins/gecko-mediaplayer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.38 2010/09/16 01:22:44 ssuominen Exp $

*gecko-mediaplayer-0.9.9.2_p1762 (16 Sep 2010)

  16 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +gecko-mediaplayer-0.9.9.2_p1762.ebuild:
  New snapshot for xulrunner 2.0 testing.

  19 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  gecko-mediaplayer-0.9.9.2.ebuild:
  Remove HPPA keywording (bug #324511).

  11 May 2010; Joseph Jezak <josejx@gentoo.org>
  gecko-mediaplayer-0.9.9.2.ebuild:
  Marked ppc/ppc64 stable for bug #311801.

  09 May 2010; Raúl Porcel <armin76@gentoo.org>
  gecko-mediaplayer-0.9.9.2.ebuild:
  alpha stable wrt #311801

  18 Apr 2010; Pacho Ramos <pacho@gentoo.org>
  gecko-mediaplayer-0.9.9.2.ebuild:
  amd64 stable, bug 311801

  12 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gecko-mediaplayer-0.9.9.2.ebuild:
  x86 stable wrt bug #311801

*gecko-mediaplayer-0.9.9.2 (18 Mar 2010)

  18 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  +gecko-mediaplayer-0.9.9.2.ebuild:
  Version bump.

  11 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  gecko-mediaplayer-0.9.9.ebuild:
  Use nsplugins.eclass wrt #304519, thanks to Martin von Gagern for
  reporting and Petr Pisar for solution.

*gecko-mediaplayer-0.9.9 (10 Feb 2010)

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +gecko-mediaplayer-0.9.9.ebuild,
  +files/gecko-mediaplayer-0.9.9-without-gconf.patch:
  Version bump.

  26 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  gecko-mediaplayer-0.9.8_p347.ebuild,
  +files/gecko-mediaplayer-0.9.8_p347-gconf-2.m4.patch:
  Add patch for configuration without gconf. Fixes bug 301932.

  22 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  files/gecko-mediaplayer-0.9.8_p347-xulrunner-detection.patch:
  Unix line endings to make patch-2.5.9 happy, thanks to Alexis Ballier.
