@@ -1,6 +1,6 @@
 DIST gecko-mediaplayer-0.9.9.2.tar.gz 262053 RMD160 24326ba75d4c733be275fe5a64a59fed068c960e SHA1 fb9620bbb9e4df27a7e588dcf3d0b6e55188c262 SHA256 378b6c149e41efd5f0e47c8a711d7b3e108409cb72c6f9504ac4a8791de83cd6
-DIST gecko-mediaplayer-0.9.9.2_p1762.tar.bz2 372015 RMD160 c91db9383a94bb29a1ef03fa03bb8ae176c2eae7 SHA1 a131317da0847add59df410d5e62f958aaf5e8ae SHA256 98a5eee621d1d76e880293343fac873b0c08aa38e55fa81b47b876a500a2679e
+DIST gecko-mediaplayer-1.0.0.tar.gz 263320 RMD160 218134c088669ae15ab12b7f008d988af3eba308 SHA1 702fbb47b45b92fcffbcd324983e96a8027bc075 SHA256 d0e5d6516c943de2257661d4718c91aa878e243d3fa891a121e99c887929499e
 EBUILD gecko-mediaplayer-0.9.9.2.ebuild 1096 RMD160 15e66bb597c8e4e990886b2755d5c310f1cbe54f SHA1 923085c144af844625fd41047d22bad61df1f7b3 SHA256 c0570ef1f6b4201167c3679551e85a1dfe07b74c5b34968dc58fc461e96d9439
-EBUILD gecko-mediaplayer-0.9.9.2_p1762.ebuild 1166 RMD160 1ae2880394ff39c05e2cc3af6e841ad14399e4f9 SHA1 0e1acab217c5700b8609daa788e624ad0ce9b462 SHA256 2536d8e474a67d548426dd30576cf548ee42c58d16ad5db65f060998c212c46a
-MISC ChangeLog 7734 RMD160 d92d1089f56abd07ceee65754e1f0298cf14f86e SHA1 48aa1bdd6914317794b3c75bb9c55a8f502952c3 SHA256 30120e3281000c9ecc9cab97d3f44e7022eacdccb123fb996f6c5b90b93e3da2
+EBUILD gecko-mediaplayer-1.0.0.ebuild 1106 RMD160 17a1d57690f50604579c29c4b6f210778a0941ed SHA1 1b161c0f75534a2a3108e38ffcf724114425c8eb SHA256 28e690d92c8b4cb797e1f53ee47c8bb665dd9cb246c363d9951636b753c879f9
+MISC ChangeLog 7880 RMD160 5d9267111423f8fc6b3461704317219316042611 SHA1 40d481ea5e226bed176638e6e7461f0955954ac8 SHA256 b3f50ec6d216737a271e566fef2a05908a374da394816824e602f2ffc1ac32f5
 MISC metadata.xml 228 RMD160 3071d739d8e15041d594882afdfc434453568466 SHA1 06e3ee83b7a5a910d2d63ea77afb2e5a292606f6 SHA256 060670a1a67923937e4bf55598ae59368d5e716b0b618dedaf12b15f45e8e234
