@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/gecko-mediaplayer-0.9.9.2_p1762.ebuild,v 1.2 2010/09/24 14:06:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/gecko-mediaplayer-1.0.0.ebuild,v 1.1 2010/11/06 18:02:30 ssuominen Exp $
 
 EAPI=2
 GCONF_DEBUG=no
@@ -8,13 +8,11 @@ inherit gnome2 multilib nsplugins
 
 DESCRIPTION="A browser plugin that uses GNOME MPlayer"
 HOMEPAGE="http://code.google.com/p/gecko-mediaplayer/"
-SRC_URI="mirror://gentoo/${P}.tar.bz2"
-#SRC_URI="http://${PN}.googlecode.com/files/${P}.tar.gz"
+SRC_URI="http://${PN}.googlecode.com/files/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS=""
-#KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~x86"
 IUSE="gnome"
 
 RDEPEND=">=dev-libs/glib-2.14:2
@@ -28,12 +26,13 @@ DEPEND="${RDEPEND}
 	sys-devel/gettext"
 
 pkg_setup() {
-	DOCS="ChangeLog DOCS/tech/javascript.txt"
 	G2CONF="--disable-dependency-tracking
 		$(use_enable gnome schemas-install)
 		$(use_with gnome gconf)
 		--with-gio
 		--with-plugin-dir=/usr/$(get_libdir)/${PLUGINS_DIR}"
+
+	DOCS="ChangeLog DOCS/tech/javascript.txt"
 }
 
 src_install() {
