@@ -1,6 +1,12 @@
 # ChangeLog for www-plugins/gecko-mediaplayer
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.38 2010/09/16 01:22:44 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.39 2010/11/06 18:02:30 ssuominen Exp $
+
+*gecko-mediaplayer-1.0.0 (06 Nov 2010)
+
+  06 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
+  +gecko-mediaplayer-1.0.0.ebuild:
+  Version bump.
 
 *gecko-mediaplayer-0.9.9.2_p1762 (16 Sep 2010)
 
